# sCellST

./: .gitignore  .gitmodules  Makefile  README.md  environment.yml  full_pipeline_script.py  pyproject.toml  training_tutorial.ipynb
config/: ct_default.yaml  gene_default.yaml  gene_histogene.yaml  gene_istar.yaml  gene_mclstexp.yaml  gene_simulation.yaml  gene_test.yaml  gene_thitogene.yaml
config/data/: data.yaml  data_histogene.yaml  data_istar.yaml  data_mclstexp.yaml  data_simulation.yaml  data_test.yaml  data_thitogene.yaml
data/: gene-names.txt  genes_marker_ovary.csv  imagenet_stats.json  ovarian_celltype_markers.csv
data_embedder/: base_processor.py  constants.py  instance_embedder.py  logger.py  spatial_transformation.py  utils.py  utils_from_hest.py  visium_processor.py
hovernet/: README.md  constants.py  mask_utils.py  output_formatter.py  plot_manager.py  run_infer.py
moco-v3/: augmentations.py  data_utils.py  dataset_utils.py  main_moco.py
scellst/: __init__.py  config.py  constant.py  constants.py  eval_utils.py  inference.py  io_utils.py  logger.py  predict.py  submit_function.py  train.py  trainer.py  type.py  utils.py
scripts/: convert_to_pyr.py  eval_visium_predictions.py  extract_cells.py  extract_common_hvg_pdac.py  extract_marker_genes.py  inference_scellst.py  process_visium_slides.py  train_scellst.py
simulation/: cluster_cells.py  data_loader.py  data_preparation.py  decoupler_utils.py  encode_cell_images.py  main.py  prepare_simulation.py  sim_data_utils.py  supervised_lightning_model.py  supervised_model.py
(+59 files in other folders)
