[tool.poetry]
name = "cellst"
version = "0.1.0"
description = "CellST is a new approach to train gene expression predictor from cell morphology with a multiple instance learning approach."
authors = ["loic-chadoutaud <loic.chadoutaud@curie.fr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.4.1+cu118", source = "pytorch-gpu-src"}
torchvision = {version = "^0.19.1+cu118", source = "pytorch-gpu-src"}
openslide-python = "^1.3.1"
scanpy = "1.9"
numpy = "<2.0.0"
lightning = "^2.4.0"
tensorboard = "^2.17.1"
fastcluster = "^1.2.6"
pydantic = "^2.9.2"
scikit-misc = "^0.5.1"
pyvips = "^2.2.3"
statannotations = "^0.6.0"
matplotlib = "<3.7"
dask = "^2024.9.1"
timm = "0.4.9"
scikit-image = "^0.24.0"
docopt = "^0.6.2"
psutil = "^6.0.0"
imgaug = "^0.4.0"
termcolor = "^2.5.0"
albumentations = "^1.4.18"
imagecodecs = "^2024.9.22"
gdown = "^5.2.0"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[[tool.poetry.source]]
name = "torch-scatter"
url = "https://data.pyg.org/whl/torch-2.4.0+cu118.html"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"